--- a/templates/notes.html
+++ b/templates/notes.html
@@ -212,7 +212,7 @@
 			</div>
 		</div>
 		<div class="concept">
-			<div class="concept-title">1.3.2 CSS: Inheritence</div>
+			<div class="concept-title">1.3.2 CSS: Inheritance</div>
 			<div class="concept-description">
 				<pre>
 	an element "inherits" style rules from its parents which it can override; Browsers 
@@ -585,7 +585,7 @@
 	?? to the class file, and should not be used outside
 
 	----------------
-	Inheritence and Method-overriding:
+	Inheritance and Method-overriding:
 
 	class Parent():
 		
@@ -1046,7 +1046,7 @@
 			{{ '{{' }} item | escape {{ '}}' }} 	
 				# to escape &quot;&amp;lt;, &amp;gt;, &quot;, &amp;&quot; in the variable item
 			{{ '{{' }}variable | safe{{ '}}' }}     # to leave HTML in variable alone
-			template inheritence: //child.html derives from a base.html
+			template inheritance: //child.html derives from a base.html
 			base.html	
 				&lt;html&gt;
 				...
